    @startuml
!pragma layout smetana

class User {
}

class Team {
}

class Player {
}

class Club {
}

class Stats {
}

class League {
}

class Game {
}

User "1" --> "0..*" Team : >

Team "1" --> "0..*" Player : >

Player "1" --> "1" Club : >

Player "1" --> "0..*" Stats :>

League "1" --> "0..*" Team : >

League "1" --> "0..*" Game : >

Game "1" --> "0..*" Stats : >

@enduml
